# boto3-assume

./: .gitignore  CHANGELOG.md  LICENSE  README.md  noxfile.py  setup.cfg  tester.py
.github/workflows/: unit-tests.yml
src/boto3_assume/: __init__.py  aio_assume_refresh.py  aio_core.py  assume_refresh.py  core.py  exceptions.py
tests/unit/: aio_core_test.py  assume_role_test.py  conftest.py  core_test.py
