[metadata]
name = boto3-assume
version = attr: boto3_assume.__version__
description = Easily create boto3 assume role sessions with automatic credential refreshing.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Brandon Temple Paul
author_email = btemplepgit@gmail.com
url = https://github.com/btemplep/boto3-assume
project_urls = 
    Repository = https://github.com/btemplep/boto3-assume
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
license = Apache License 2.0
license_files = 
    LICENSE
keywords = 
    assume
    aws
    boto3
    botocore
    credentials
    creds
    iam
    refresh
    refreshable
    role
    sdk
python_requires = >= 3.10

[options]
package_dir=
    =src
packages = find:
install_requires =
    boto3
    botocore

[options.packages.find]
where=src
exclude =
    tests

[options.extras_require]
dev =
    aioboto3
    build
    coverage
    moto[server]
    nox
    pytest
    pytest-asyncio
    pytest-cov
    pytz
    twine

